# Hackathon_0_Digital_FTE

./: .claudeignore  .gitignore  .md  01_silver_tier_spec.md  Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dockerfile  GEMINI_INTEGRATION_SUMMARY.md  GEMINI_UPGRADE_GUIDE.md  GOLD_TIER_COMPLETE_ANALYSIS.md  HACKATHON_COMPLETION_REPORT.md  README.md  TASK_SUMMARY.md  TEST_RESULTS_REPORT.md  USER_STORY_4_SUMMARY.md  agent_output.txt  agent_output_v2.txt  agent_state.json  auth_helper.py  check_render_api.py  check_whatsapp_setup.py  create_odoo_db.sh  debug_output.txt  debug_startup.py  debug_whatsapp.py  debug_x.txt  debug_x_final.txt  debug_x_final_v3.txt  debug_x_final_v4.txt  debug_x_final_v5.txt  debug_x_final_v6.txt  debug_x_utf8.txt  debug_x_v2.txt  diagnose_whatsapp.py  docker-compose-odoo-simple.yml  docker-compose-odoo.yml  fix_events.py  gold_spec.md  inspect_whatsapp_dom.py  (+65 more)
.claude/: settings.json  settings.local.json
.obsidian/: workspace.json
.playwright_session/: state.json
Approved/: 20260209T203925Z_No_Subject.md
Failed/: 20260209T191028Z_ed930509.json  20260209T195916Z_695bf70a.json  20260214T201657Z_Action_Required__todo_txt.md  20260218T012130Z_Re__greeting.md  20260218T114333Z_Re__Hiring_Agentic_AI_Developer_and_Researcher.md  20260218T183147Z_Re__early_leave_request.md  DRAFT_20260219_035546_Papa.md  DRAFT_20260220_023716_Test_Number.md  GMAIL_19c01736787308cc.md  GMAIL_19c06372adfb6aed.md  GMAIL_19c17124fec63068.md  GMAIL_19c2477ae7a420d0.md  GMAIL_19c2697dbf0e32a6.md  GMAIL_19c28218a1caf57e.md  GMAIL_19c28933e2f02d69.md  final_x_test.md  (+14 more)
(+468 files in other folders)
